# debate-llm-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
agents/: __init__.py  debate.py  llm_client.py  models.py
api/: __init__.py  index.py  main.py
evaluator/: __init__.py  metrics.py
prompts/: __init__.py  templates.py
public/: index.html
tests/: README.md  test_evaluator.py  test_models.py
