[project]
name = "debate-llm-agent"
version = "1.0.0"
description = "An LLM agent that debates itself before answering - showcasing multi-agent reasoning"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9,<3.13"
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["llm", "ai", "debate", "multi-agent", "reasoning", "langchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "api", "evaluator", "prompts"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
